# singapore-house-pricing

./: LICENSE  README.md  pyproject.toml
data/processed/: features_list.json
data/raw/: sg_price_index.csv
models/: model_metadata.json  quantile_10.joblib  quantile_50.joblib  quantile_90.joblib
reports/: metrics.json  predictions.csv  project_summary.md
scripts/: download_raw_data.py  run_project.sh
src/singapore_house_pricing/: __init__.py  cli.py  config.py  data.py  features.py  modeling.py  pipeline.py  reporting.py
src/singapore_house_pricing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_features.py  test_modeling.py
