[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singapore-house-pricing"
version = "0.1.0"
description = "Probabilistic resale flat valuation pipeline for Singapore HDB homes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
download = [
  "kaggle>=1.6",
]

[project.scripts]
singapore-house-pricing = "singapore_house_pricing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
